--- a/style.css
+++ b/style.css
@@ -1,13 +1,27 @@
 body {
   margin: 0;
 font-family: 'Nanum Gotic', sans-serif;
+
 }
+
+
 
 a {text-decoration: none;
 color: white;
 }
 
+.mainlogo {
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+  background-color: #ffffff
+}
 
+.mainlogo {color:black;
+  font-size: 40px;
+  margin-bottom: 50px;
+margin-top: 20px;}
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -18,7 +32,7 @@ color: white;
 }
 
 .navbar_logo {
-  font-size: 24px;
+  font-size: 40px;
   color: white;
 }
 
